# storage/api-docs/api-docs.json
@@ -226,21 +226,42 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Error response",
+                    "422": {
+                        "description": "Validation error response",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "status_code": {
+                                            "description": "HTTP status code.",
+                                            "type": "integer",
+                                            "example": 422
+                                        },
                                         "success": {
-                                            "description": "Indicates if the request failed.",
+                                            "description": "Indicates if the request was successful.",
                                             "type": "boolean",
                                             "example": false
                                         },
                                         "message": {
                                             "description": "Error message.",
                                             "type": "string",
-                                            "example": "Bad request."
+                                            "example": "Validation errors."
+                                        },
+                                        "errors": {
+                                            "description": "Details of validation errors.",
+                                            "type": "object",
+                                            "additionalProperties": {
+                                                "type": "array",
+                                                "items": {
+                                                    "type": "string",
+                                                    "example": "Page must be at least 1."
+                                                }
+                                            }
+                                        },
+                                        "data": {
+                                            "description": "Optional data, usually null in error responses.",
+                                            "type": "null",
+                                            "example": null
                                         }
                                     },
                                     "type": "object"
